# t2i-diffusion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements-devtools.txt  requirements.txt  train.py
configs/: rft_simple.yml
diffusion/: configs.py  muon.py  schedulers.py
diffusion/data/: __init__.py  imagenet.py  local_imagenet_256.py  mnist.py
diffusion/models/: __init__.py  rft_img.py
diffusion/nn/: attn.py  embeddings.py  mimetic.py  mlp.py  modulation.py  normalization.py
diffusion/sampling/: __init__.py  simple.py
diffusion/trainers/: __init__.py  base.py  rft_trainer.py  vae_rft_trainer.py
diffusion/utils/: __init__.py  ddp.py  logging.py
scripts/: download_imagenet.py
